# Smartcity_Emergency_and_priority_management

./: CMakeLists.txt  Makefile  RAPPORT.odt  README.md
config/: load_config.sh  metrics_schema.json  scenarios.json
demos/: demo_emergency.cpp
include/core/: constants.h  enums.h  position.h
include/infrastructure/: road_network.h  traffic_light.h
include/simulation/: simulation.h
include/vehicles/: vehicle.h
src/: main.cpp
src/core/: position.cpp
src/infrastructure/: road_network.cpp  traffic_light.cpp
src/simulation/: simulation.cpp
src/vehicles/: vehicle.cpp
tests/: simple_test.cpp
